Fix alignment issue with inline headers

--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -66,7 +66,6 @@
 		
 		+ p {
 			display: inline;
-			vertical-align: top;
 			
 			&::after {
 				display: block;
